# vidgrep

./: .gitignore  LICENSE  README.md  common.py  cut.py  index.py  oneshot.py  pyproject.toml  search.py
vidgrep/: cli.py  common.py  cut.py  export.py  index.py  oneshot.py  portable.py  search.py  serve.py
