[project]
name = "vidgrep"
version = "0.2.0"
description = "Natural-language search over local video files (CLIP + sqlite-vec, fully local)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "open-clip-torch>=2.24",
    "opencv-python>=4.9",
    "pillow",
    "scenedetect>=0.6.3",
    "sqlite-vec>=0.1.6",
    "torch>=2.3",
]

[project.scripts]
vidgrep = "vidgrep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
